fix quick problem on smaller desktop screens

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ button {
 .main-container{
   display:flex;
   flex-direction:column;
+  height:90vh;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly
 }
 
 /* TEXT CONTAINER */
